--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Grammar Learning Studio | 文法學習工作室</p>
+        <p>&copy; 2025 Jelena AI Studio | 耶萊娜AI學園  https://wfhlifelab.com/ </p>
     </footer>
 
     <script src="script.js"></script>
