--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Jelena AI Studio | 耶萊娜AI學園  https://wfhlifelab.com/ </p>
+        <p>&copy; 2025 Jelena AI Studio | 耶萊娜AI學園| <a href="https://wfhlifelab.com" target="_blank">https://wfhlifelab.com</a> </p>
     </footer>
 
     <script src="script.js"></script>
