--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Jelena AI Studio | 耶萊娜AI學園| <a href="https://wfhlifelab.com" target="_blank">https://wfhlifelab.com</a> </p>
+        <p>&copy; 2025 Jelena AI Studio | 耶萊娜AI學園| <a href="https://wfhlifelab.com" target="_blank" style="color: #e6c78b; text-decoration: underline;">
+    https://wfhlifelab.com
+  </a> </p>
     </footer>
 
     <script src="script.js"></script>
